# AutoTomeQC

./: README.md  pyproject.toml
.github/workflows/: test_lint_type.yml
autotomeqc/: __main__.py
autotomeqc/config/: config_loader.py  yolo-config.yaml
autotomeqc/yolo/: visualization.py  yolo_client.py  yolo_server.py
tests/: test_yolo_client.py  test_yolo_server.py
